Fixed stuff and implemented BetterProfiles and Jump To Present Bar Revamp

--- a/Discord/comfy.theme.css
+++ b/Discord/comfy.theme.css
@@ -233,7 +233,4 @@
   --background-modifier-hover: #262b41;
   --background-modifier-active: #262b41;
   --modal-background: var(--background-primary);
-  --header-primary: #fff;
-  --header-secondary: #b1b5b9;
-  --text-normal: #b5b7b9;
 }
